# FIProductTracker

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/accounts/: dependencies.py  models.py  schemas.py  security.py
backend/app/api/v1/internal/: auth.py  products.py
backend/app/calculations/: amortization.py  average_daily_balance.py  market_rules.py  minimum_payment.py  rates.py  recommendations.py  statement_periods.py
backend/app/core/: config.py  db.py
backend/app/products/: models.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_add_users_and_product_owner.py  0003_add_us_market_fields.py  0004_add_statement_cycle_dates.py  0005_add_fee_insurance_fx_fields.py
backend/tests/integration/: conftest.py  test_auth_api.py  test_dashboard_summary_api.py  test_product_fields_api.py  test_products_api.py  test_recommendations_api.py  test_statements_api.py
backend/tests/unit/: test_amortization.py  test_average_daily_balance.py  test_market_rules.py  test_minimum_payment.py  test_rates.py  test_recommendations.py  test_security.py  test_statement_periods.py
design-export/: FiCreditTrackerStartup.html
docs/: deployment-plan-railway.md  design-brief.md  frontend-build-plan.md  prd.md  user-journeys.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json
frontend/src/: App.tsx  index.css
(+38 files in other folders)
